# AdrenaProxy

./: .gitattributes  .gitignore  AdrenaProxy Setup.bat  AdrenaProxy Setup.sh  AdrenaProxy Uninstall.bat  CMakeLists.txt  LICENSE  README.md  adrena_proxy.ini
.github/workflows/: build.yml
adrena_core/: CMakeLists.txt
adrena_core/include/adrena_core/: Hack.h  builtin_plugins.h  config.h  gpu_detect.h  hack.h  logger.h  overlay_menu.h  plugin_api.h  plugin_manager.h  sgsr1_pass.h  sgsr2_pass.h  shader_cache.h  shared_state.h
adrena_core/scr/: builtin_plugins.cpp  config.cpp  gpu_detect.cpp  guids.cpp  logger.cpp  overlay_menu.cpp  plugin_manager.cpp  sgsr1_pass.cpp  sgsr2_pass.cpp  shader_cache.cpp  shared_state.cpp
cmake/: check_float16.cmake  check_float64.cmake  embed_shaders.cmake  generate_combined_header.cmake  generate_header.cmake
config_gui/: CMakeLists.txt  config_gui_main.cpp
dlss_proxy/: CMakeLists.txt  dlss_main.cpp  ngx_param.cpp  ngx_param.h
dxgi_proxy/: CMakeLists.txt  dxgi.def  dxgi_main.cpp  proxy_factory.cpp  proxy_factory.h  proxy_swapchain.cpp  proxy_swapchain.h
plugins/: CMakeLists.txt
plugins/common/: fallback_copy.h  sdk_loader.h
plugins/example/: CMakeLists.txt  example_plugin.cpp
plugins/fsr2/: CMakeLists.txt  fsr2_plugin.cpp
plugins/fsr3/: CMakeLists.txt  fsr3_plugin.cpp
plugins/fsr4/: CMakeLists.txt  fsr4_plugin.cpp
plugins/multi_fg/: CMakeLists.txt  multi_fg_plugin.cpp
plugins/vulkan_mfg/: CMakeLists.txt  reproject.comp.glsl  vk_stub.h  vulkan_mfg_plugin.cpp
plugins/xess/: CMakeLists.txt  xess_plugin.cpp
profiles/: README.md  fex_turnip.ini  snapdragon_x_elite.ini  steamdeck_proton.ini  winlator.ini
shaders/: fg_interpolate.hlsl  fg_motion_est.hlsl  fg_reactive_mask.hlsl  sgsr1_easu.hlsl  sgsr1_official.hlsl  sgsr1_rcas.hlsl  sgsr2_convert.hlsl  sgsr2_reproject.hlsl  sgsr2_upscale.hlsl
src/: config.cpp  config.h  dllmain.cpp  dxgi.def  fg_pass.cpp  fg_pass.h  gpu_detect.cpp  gpu_detect.h  logger.cpp  logger.h  overlay_menu.cpp  overlay_menu.h  proxy_factory.cpp  proxy_factory.h  proxy_swapchain.cpp  proxy_swapchain.h  sgsr1_pass.cpp  sgsr1_pass.h  sgsr2_pass.cpp  sgsr2_pass.h
src/dxgi_proxy/: config.cpp  config.h  dxgi.def  fg_pass.cpp  fg_pass.h  gpu_detect.cpp  gpu_detect.h  logger.cpp  logger.h  overlay_menu.cpp  proxy_factory.cpp  proxy_factory.h  proxy_swapchain.cpp  sgsr1_pass.h  sgsr2_pass.h
version_proxy/: CMakeLists.txt  version.def  version_main.cpp
